@@ -15,27 +15,35 @@ mode <- function(x) {
 
 "storage.mode<-" <-function(x, value)
 {
-    if (storage.mode(x)==value) return(x)
+    if (storage.mode(x) == value) return(x)
     if(is.factor(x)) stop("invalid to change the storage mode of a factor")
     if(value == "single")
         warning('use of storage.mode(x) <- "single" is depecated: use mode<- instead', domain=NA, call.=FALSE)
     mde <- paste("as.",value,sep="")
     atr <- attributes(x)
+    isSingle <- !is.null(attr(x, "Csingle"))
+    setSingle <- value == "single"
     x <- eval(call(mde,x), parent.frame())
     attributes(x) <- atr
-    attr(x, "Csingle") <- if(value == "single") TRUE # else NULL
+    ## this avoids one copy
+    if(setSingle != isSingle)
+        attr(x, "Csingle") <- if(setSingle) TRUE # else NULL
     x
 }
 
 "mode<-" <- function(x, value)
 {
-    if (storage.mode(x)==value) return(x)
+    if (storage.mode(x) == value) return(x)
     if(is.factor(x)) stop("invalid to change the storage mode of a factor")
     mde <- paste("as.",value,sep="")
     atr <- attributes(x)
+    isSingle <- !is.null(attr(x, "Csingle"))
+    setSingle <- value == "single"
     x <- eval(call(mde,x), parent.frame())
     attributes(x) <- atr
-    attr(x, "Csingle") <- if(value == "single") TRUE # else NULL
+    ## this avoids one copy
+    if(setSingle != isSingle)
+        attr(x, "Csingle") <- if(setSingle) TRUE # else NULL
     x
 }
 storage.mode <- function(x) {
